--- a/web/src/styles/pages/orphanage.css
+++ b/web/src/styles/pages/orphanage.css
@@ -165,6 +165,10 @@
   transition: background-color 0.2s;
 }
 
+a{
+  text-decoration: none;
+}
+
 .orphanage-details .orphanage-details-content button.contact-button svg {
   margin-right: 16px;
 }
